# todo-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: deploy.yml  release-plz.yml  release.yml  rust.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  state.rs
src/api/: health_check.rs  mod.rs
src/application/commands/: create_todo.rs  delete_todo.rs  mod.rs  update_todo.rs
src/application/queries/: get_all_todos.rs  get_todo_by_id.rs  mod.rs
src/domain/: mod.rs  todo_id.rs
src/domain/models/: todo.rs
src/infrastructure/data/db_context/: surreal_context.rs
src/infrastructure/data/repositories/: todo.rs
tests/api/: create_todo.rs  delete_todo.rs  get_all_todos.rs  main.rs  test_state.rs  utils.rs
wix/: main.wxs
