[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surreal-id = "0.2.2"
surrealdb = "1.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }

[dev-dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
